[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defense-analysis-v2"
version = "2.1.0"
description = "Phylogenetically-corrected comparative analysis of bacterial anti-phage defense systems vs. plasmid carriage."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Defense-Plasmid pipeline authors" }]
keywords = [
    "phylogenetics",
    "comparative-genomics",
    "anti-phage-defense",
    "plasmids",
    "bacteria",
    "phyloglm",
    "PGLMM",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "dendropy>=4.6",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/defense_analysis_v2"
Issues = "https://github.com/YOUR_ORG/defense_analysis_v2/issues"

[project.scripts]
# One CLI entry point for the full pipeline. After `pip install .` users
# can invoke `defense-plasmid-analyze --help` from anywhere.
defense-plasmid-analyze = "defense_analysis_v2.defense_plasmid_analysis:main"

[tool.setuptools]
# Explicit list so we don't accidentally ship new_scripts/ or the top-level
# defense_plasmid_analysis.py when the repo is packaged.
packages = ["defense_analysis_v2"]
include-package-data = true

[tool.setuptools.package-data]
# R scripts live inside the package and are invoked via subprocess at
# runtime; without this line they won't ship in wheels / sdists.
defense_analysis_v2 = ["r_scripts/*.R"]

[tool.ruff]
line-length = 100
target-version = "py39"
